fix/pwa-iphone-notch-safe-area: prevent scroll on iOS and fix safe area approach

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,8 @@
 :host {
+  /* Prevent scroll on iOS */
+  position: fixed;
+  inset: 0;
+
   overflow: hidden;
   display: block;
 
@@ -20,9 +24,14 @@
 }
 
 .app-container {
+  position: relative;
+  
+  /* Prevent scroll on iOS */
+  overflow: hidden;
   display: grid;
   grid-template: 
     "main" 1fr "nav" 80px / 1fr;
+
   width: 100%;
   height: 100vh;
   
@@ -44,12 +53,10 @@
 
   min-height: 0;
   padding: var(--space-md);
-  padding-top: calc(var(--space-md) + env(safe-area-inset-top, 0));
 
   background: var(--tui-base-01);
 }
 
 .app-navigation {
   grid-area: nav;
-  padding-bottom: env(safe-area-inset-bottom, 0);
 }
