--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,13 @@
 @use './shared/lib/widget' as *;
 
 html, body {
+  /* Prevent scroll on iOS */
+  position: fixed;
+  inset: 0;
+
+  overflow: hidden;
   overflow-x: hidden;
+
   width: 100%;
   max-width: 100%;
   height: 100%;
